# tree-sitter-hledger

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  t.journal  test.journal  tree-sitter.json
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_hledger/: __init__.py
bindings/rust/: lib.rs
src/: grammar.json  node-types.json  parser.c
test/corpus/: account.txt  autopostings.txt  comments.txt  periodic_transactions.txt  special_directives.txt  tag.txt  transaction.txt
